Intermediate Model Transformations: Fix warnings